fix(disqus): fix disqus color-schem in dark mode

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -23,6 +23,10 @@ body {
   }
 }
 
+iframe[src*=disqus] {
+  color-scheme: light;
+}
+
 a {
   font-weight: 500;
   color: $link-color;
